Initial commit for new Vege-Foods repo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vege-foods",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AliHassan-creator.github.io/vege-foods",
+  "homepage": "https://AliHassan-creator.github.io/Vege-Foods",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
